searched movies now appear at the bottom - fix movie info spacing next

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,43 +19,57 @@ html {
     border-right: .15em solid transparent;
     white-space: nowrap;
     margin: 0 auto;
-    animation: 
+    animation:
         typing 4s steps(50),
         blink-caret 4.4s;
 }
 
 @keyframes typing {
-    from { width: 0 }
-    to { width: 55% }
-  }
-  
+    from {
+        width: 0
+    }
+
+    to {
+        width: 55%
+    }
+}
+
 @keyframes blink-caret {
-    from, to { border-color: transparent }
-    50% { border-color: #edede9; }
+
+    from,
+    to {
+        border-color: transparent
+    }
+
+    50% {
+        border-color: #edede9;
+    }
 }
 
 P {
     text-align: center;
 }
 
-a, a:visited {
+a,
+a:visited {
     text-decoration: none;
     text-align: center;
     color: #edede9;
-  }
-  
-  a:hover {
+}
+
+a:hover {
     text-decoration: none;
     color: #94d2bd;
     text-align: center;
-  }
-  
-  a:active, a:focus {
+}
+
+a:active,
+a:focus {
     text-decoration: none;
     color: #aaa;
     outline: none;
     text-align: center;
-  }
+}
 
 span {
     color: #edede9;
@@ -73,7 +87,7 @@ input {
 
 #search-section {
     padding-top: 15px;
-    
+
 }
 
 #search-button {
@@ -83,12 +97,15 @@ input {
     border-radius: 10px;
 }
 
-#search-button:hover {
+.more-info-button {
+    width: 100%;
+}
+
+#search-button:hover,
+.more-info-button:hover {
     background-color: #94d2bd;
     width: 100%;
-    margin-bottom: 20px;
-    margin-top: 10px;
-    border-radius: 10px;
+
 }
 
 .randSelect {
@@ -181,4 +198,21 @@ input {
     width: 300px;
     height: 300px;
     border-radius: 10px;
+}
+
+img {
+    width: 100%;
+    padding: 10px;
+}
+
+span {
+    width: 30vw;
+}
+
+.inline {
+    display: inline-block;
+    max-width: 250px;
+    padding: 5px;
+    margin: 7px;
+    align-items: center;
 }
